lib/src/compiler/tests/testdata/errors/9.out
error[E002]: wrong type
 --> line:2:31
  |
2 |   condition: "foobar" matches "foobar"
  |                               ^^^^^^^^ expression should be `regexp`, but is `string`
  |